hphp/hack/test/typecheck/contravariance_unresolved_bad_2.php.constraint_method_call.exp
ERROR: File "contravariance_unresolved_bad_2.php", line 38, characters 5-14:
Typing error (Typing[4110])
  File "contravariance_unresolved_bad_2.php", line 8, characters 30-35:
  Expected `string`
  File "contravariance_unresolved_bad_2.php", line 38, characters 12-13:
  But got `int`
